--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,12 @@ DerivedData
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
+# Keystore files
+*.jks
+*.keystore
 
+# Google Services (e.g. APIs or Firebase)
+google-services.json
 # Android/IntelliJ
 #
 build/
